--- a/WebStore/WebStore.csproj
+++ b/WebStore/WebStore.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductImage.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\ViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ImageService.cs" />
   </ItemGroup>
@@ -172,6 +173,8 @@
     <Content Include="Images\Categories\3\Category_Smartphones.png" />
     <Content Include="Images\Categories\4\Category_Headphones.jpg" />
     <Content Include="Images\TechStoreLogo.png" />
+    <Content Include="Images\Users\1\User_Admin.jpg" />
+    <Content Include="Images\Users\2\User_Guest.jpg" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -208,7 +211,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Images\Products\" />
-    <Folder Include="Images\Users\" />
+    <Folder Include="Images\Users\3\" />
     <Folder Include="Views\Image\" />
   </ItemGroup>
   <ItemGroup>
