--- a/WebStore/WebStore.csproj
+++ b/WebStore/WebStore.csproj
@@ -210,6 +210,7 @@
     <Content Include="Views\Home\ASPNET_Guide.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\User\Details.cshtml" />
+    <Content Include="Views\Shared\_NavigationBar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
