--- a/WebStore/WebStore.csproj
+++ b/WebStore/WebStore.csproj
@@ -134,13 +134,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202402290033500_InitialState.cs" />
-    <Compile Include="Migrations\202402290033500_InitialState.Designer.cs">
-      <DependentUpon>202402290033500_InitialState.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202403030807415_User-RoleAddressPhone-Added.cs" />
-    <Compile Include="Migrations\202403030807415_User-RoleAddressPhone-Added.Designer.cs">
-      <DependentUpon>202403030807415_User-RoleAddressPhone-Added.cs</DependentUpon>
+    <Compile Include="Migrations\202403072205351_InitialState.cs" />
+    <Compile Include="Migrations\202403072205351_InitialState.Designer.cs">
+      <DependentUpon>202403072205351_InitialState.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Category.cs" />
@@ -149,6 +145,7 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductImage.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserListItem.cs" />
     <Compile Include="Models\ViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ImageService.cs" />
@@ -298,9 +295,11 @@
     <Content Include="Views\Shared\_NavigationBar.cshtml" />
     <Content Include="Views\Products\Products.cshtml" />
     <Content Include="Views\Products\ProductDetails.cshtml" />
+    <Content Include="Views\Users\SavedList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Backup\" />
     <Folder Include="Images\Users\3\" />
     <Folder Include="Views\Image\" />
   </ItemGroup>
@@ -332,11 +331,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202402290033500_InitialState.resx">
-      <DependentUpon>202402290033500_InitialState.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202403030807415_User-RoleAddressPhone-Added.resx">
-      <DependentUpon>202403030807415_User-RoleAddressPhone-Added.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202403072205351_InitialState.resx">
+      <DependentUpon>202403072205351_InitialState.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
